--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
   "dependencies": {
     "@react-pdf/renderer": "^3.3.4",
     "axios": "^1.6.7",
-    "json-server": "^1.0.0-alpha.23",
+    "chart.js": "^4.4.1",
+    "chartjs": "^0.3.24",
     "primeface": "^0.0.1-security",
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
-    "primereact": "^10.4.0",
+    "primereact": "^10.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.0",
@@ -28,6 +29,7 @@
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
+    "@types/chart.js": "^2.9.41",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@types/react-pdf": "^7.0.0",
